backend-dev/be-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-cilist-dev
  namespace: development
  labels:
    app: be-cilist-dev
    name: be-cilist-dev
    keel.sh/policy: major
    keel.sh/trigger: poll  
spec:
  selector:
    matchLabels:
      app: be-cilist-dev
  replicas: 2
  template:
    metadata:
      labels:
        app: be-cilist-dev
    spec:
      containers:
      - name: be-cilist-dev
        image: ramses01/cilist-backend-dev:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-be-cilist-dev
  namespace: development
spec:
  selector:
    app: be-cilist-dev
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: NodePort
