backend-dev/be-ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-be-dev
  namespace: development 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api-dev.ccilist.my.id
    http:
      paths:
        - path:
          pathType:
          backend:
            serviceName: svc-be-cilist-dev
            servicePort: 80
